--- a/src/component/Welcome.css
+++ b/src/component/Welcome.css
@@ -6,7 +6,7 @@
     font-family: monospace;
     font-size: 23;
     width: 100;
-    margin-top: 25%;
+    margin-top: 50vh;
   }
 
   .components {
